--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-comment-alt"></i> ChatCord</h1>
+				<h1><i class="fas fa-comment-alt"></i> Chat over socket</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
